side bar working, fix spacing issue on mobile

--- a/assets/css/cs61a.css
+++ b/assets/css/cs61a.css
@@ -33,11 +33,12 @@
 
 #teaching-box {
     position:relative;
-    left:50%;
-    text-align:center;
+    top:10px;
+    left:30%;
+    width:70%;
+    height:100%;
+    margin-bottom:50px;
     font-size: 20px;
-    width:80%;
-    transform: translateX(-34%);
 }
 
 #teaching-title-text {
@@ -52,7 +53,7 @@
 
 #teaching-text {
     position:relative;
-    transform: translateX(5%);
+    padding-left: 30px;
     width:100%;
     height:100%;
     font-size: 16px;
