--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -204,7 +204,7 @@
 
 /*scroll*/
 #scroll-margin {
-    height:8%;
+    height:2%;
     left:30%;
 }
 #scroll-box {
